--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -2,9 +2,9 @@ name: robot application
 
 on:
   push:
-    branches: ["dev"]
+    branches: ["master"]
   pull_request:
-    branches: ["dev"]
+    branches: ["master"]
   
   schedule:
     - cron: "0 0 * * 0"   # runs weekly every sunday at 00:00
