--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -2,7 +2,7 @@ name: robot application
 
 on:
   push:
-    branches: ["master"]
+    branches: ["master", "dev-v1"]
   pull_request:
     branches: ["master"]
   
@@ -14,6 +14,7 @@ permissions:
 
 jobs:
   build:
+    environment: linode-price-tracker
 
     runs-on: ubuntu-latest
 
@@ -30,8 +31,13 @@ jobs:
           TARGET_WEBSITE: ${{ secrets.TARGET_WEBSITE }}
 
       run: |
+      
+        echo $SENDER
+        echo $PASSWORD
+        echo $TARGET_WEBSITE
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      
     - name: Run main
       run: |
         # stop the build if there are Python syntax errors or undefined names
